# AudioSeparation

./: .flake8  .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
doc/: Internals.md  Resources.md
doc/MDX/: .gitignore  BatchNormalization.md  MDX-Net.md  MatMul.md
doc/MDX/maps/: Kim_Vocal_2.arch.txt  Kim_Vocal_2_class.map  Kim_Vocal_2_onnx.map  mapping.txt
example_workflows/: 00_Vocals.json  01_Vocals_Drums_Bass.json  02_Batch.json  03_Instrumental_keep.json  04_Demucs.json
js/: node_change.js  toast_handler.js
models/: uvr_model_data.json
source/db/: hash.py  hash_dir.py  load_model.py  models_db.py
source/inference/: CrossTransformerEncoder.py  Demucs.py  HDemucs.py  HTDemucs.py  MDX_Net.py  demixer.py  demucs_api.py  demucs_code.py  demucs_log_helper.py  get_model.py  resample_frac.py  stft.py  wiener.py
source/utils/: comfy_node_action.py  comfy_notification.py  downloader.py  load_audio.py  load_class.py  load_onnx.py  load_safetensors.py  logger.py  misc.py  save_audio.py  torch.py
tool/: README.md  batch_convert.py  demix.py  demucs2safetensors.py  download_model.py  onnx2safetensors.py  show_class.py  show_db.py  show_metadata.py  show_onnx.py  style_fixer.py  uvr_hash.py
